add text-based end slide with links

--- a/hand-drawn/index.html
+++ b/hand-drawn/index.html
@@ -5,3 +5,14 @@ layout: slideshow
 {% for slide in site.slides %}
 {{slide.output}}
 {% endfor %}
+
+<section>
+
+
+  <h2>Thank you!</h2>
+  <h3>Tamara Temple</h3>
+  <h3><a href="https://twitter.com/tamouse">Twitter: @tamouse</a></h3>
+  <h3><a href="https://github.com/tamouse">Github: tamouse</a></h3>
+  <h3><a href="http://swaac.tamouse.org">Dev blog: <code>swaac.tamouse.org</code></a></h3>
+
+</section>
